<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="338dp"
        android:layout_height="68dp"
        android:layout_marginTop="36dp"
        android:text="@string/luas_dan_volume_balok"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/alas_segitiga"
        android:layout_width="261dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/masukkan_lebar"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tinggi_segitiga"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/tinggi_prisma"
        android:layout_width="261dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/masukkan_tinggi"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alas_segitiga"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/tinggi_segitiga"
        android:layout_width="261dp"
        android:layout_height="62dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/masukkan_panjang"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="Autofill"
        />

    <Button
        android:id="@+id/button"
        android:onClick="hasil"
        android:layout_width="257dp"
        android:layout_height="59dp"
        android:layout_marginBottom="268dp"
        android:text="@string/hasil"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.389"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>